--- a/views/token-generation.ejs
+++ b/views/token-generation.ejs
@@ -9,10 +9,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-	<script src="static/JSPrintManager.js"></script>
+	<!-- <script src="static/JSPrintManager.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="static/JSPM_TokenPrint.js"></script>
+	<script src="static/TokenPrint.js"></script>
     <title><%= title %></title>
 </head>
 <body>
@@ -77,7 +77,7 @@
 			var textarea3 = document.getElementById('ChildTokenList');
 			textarea3.scrollTop = textarea3.scrollHeight;
 		</script>
-		<div style="margin-top: 50px;margin-left:45%;">
+		<div style="margin-top: 100px;margin-left:45%;">
 			<button type="button" class="btn btn-primary" id="resetdata" data-bs-toggle="modal" data-bs-target="#ResetDataModal">
 				Reset Data
 			</button>
