--- a/views/patient-details.ejs
+++ b/views/patient-details.ejs
@@ -108,12 +108,11 @@
 					</table>
 				</div>
 				<div class="wrapper">
-					<% const x = "Patient Description to be entered here\n\nABCEDFGHIJKLMNOPQRSTUVWXYZ\nabcedfghijklmnopqrstuvwxyz\n1234567890\n010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101"; %> 
 					<h4>Description</h4>
 					<div class="alert alert-danger" role="alert">
 						This feature is under development
 					</div>
-					<textarea class="form-control-plaintext" id="DescriptionTextAreaReadOnly" rows="5" readonly style="padding-left: 10px;padding-right: 5px;"><%= x; %></textarea>
+					<!-- <textarea class="form-control-plaintext" id="DescriptionTextAreaReadOnly" rows="5" readonly style="padding-left: 10px;padding-right: 5px;" placeholder="Enter Patient Description here..."></textarea> -->
 				</div>
 				<div class="d-flex justify-content-between" style="margin-top: 30px;">
 					<h4>Balance: Rs. <%= Balance %></h4>
@@ -286,12 +285,11 @@
 						</table>
 					</div>
 					<div class="wrapper">
-						<% const x = "Patient Description to be entered here\n\nABCEDFGHIJKLMNOPQRSTUVWXYZ\nabcedfghijklmnopqrstuvwxyz\n1234567890\n010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101"; %> 
 						<h4>Description</h4>
 						<div class="alert alert-danger" role="alert">
 							This feature is under development
 						</div>
-						<textarea class="form-control-plaintext" id="DescriptionTextArea" rows="5" style="padding-left: 10px;padding-right: 5px;"><%= x; %></textarea>
+						<!-- <textarea class="form-control-plaintext" id="DescriptionTextArea" rows="5" style="padding-left: 10px;padding-right: 5px;" placeholder="Enter Patient Description here..."></textarea> -->
 					</div>
 					<div class="d-flex justify-content-between" style="margin-top: 30px;">
 						<h4>Balance: Rs. <%= Balance %></h4><br>
@@ -307,14 +305,7 @@
 				<div id="DressingInfo">
 					<div>
 						<% if(PatientDetails.Status=="ACTIVE") { %> 
-							<form action="/patient-details/add-dressing-record">
-								<button type="submit" name="addID" value="<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
-										width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-										<path
-											d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-									</svg>Add Dressing Record
-								</button>
-							</form>
+							
 						<% } %> 
 					</div>
 					<div style="margin-top: 20px;">
@@ -358,6 +349,108 @@
 							</a>
 						</div>
 					<% } else { %>
+						<p style="font-style: italic;color:gray;">Sample Data (for designing purpose)</p>
+						<table class="table">
+							<thead>
+								<tr>
+									<th scope="col">#</th>
+									<th scope="col">Date</th>
+									<th scope="col">Dressing Charges</th>
+									<th scope="col">Ointment Charges</th>
+									<th scope="col">Other Charges</th>
+									<th scope="col">Total Amount</th>
+									<th scope="col">Discount</th>
+									<th scope="col">Amount Paid</th>
+								</tr>
+							</thead>
+							<tbody class="accordion" id="DressingRecords">
+								<tr class="accordion-item">
+									<th scope="row">1</th>
+									<td>01-01-2022</td>
+									<td>4200</td>
+									<td>1900</td>
+									<td>1200</td>
+									<td>7300</td>
+									<td>0</td>
+									<td>7000</td>
+									<td class="accordion-header" id="DressingRecord1Details">
+										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="max-height:10px;">
+											See Details...
+										</button>
+									</td>
+								</tr>
+								<tr>
+									<td colspan="9">
+										<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="DressingRecord1Details" data-bs-parent="#DressingRecords">
+											<div class="accordion-body">
+												<p><strong>Qty of Pads: </strong>5.25</p>
+												<table class="table">
+													<thead>
+														<th>Ointment Name</th>
+														<th>Quantity</th>
+														<th>Price</th>
+														<th>Total Amount</th>
+													</thead>
+													<tbody>
+														<tr>
+															<td>Burnaid</td>
+															<td>2</td>
+															<td>600</td>
+															<td>1200</td>
+														</tr>
+														<tr>
+															<td>Burnaid Plus AC</td>
+															<td>1</td>
+															<td>700</td>
+															<td>700</td>
+														</tr>
+													</tbody>
+												</table>
+												<table class="table">
+													<thead>
+														<th>Other Items Name</th>
+														<th>Quantity</th>
+														<th>Price</th>
+														<th>Total Amount</th>
+													</thead>
+													<tbody>
+														<td>Super Sonic Syrup</td>
+														<td>1</td>
+														<td>1200</td>
+														<td>1200</td>
+													</tbody>
+												</table>
+											</div>
+										</div>
+									</td>
+								</tr>
+								<tr class="accordion-item">
+									<th scope="row">2</th>
+									<td>02-01-2022</td>
+									<td>4000</td>
+									<td>0</td>
+									<td>0</td>
+									<td>4000</td>
+									<td>0</td>
+									<td>4300</td>
+									<td class="accordion-header" id="DressingRecord2Details">
+										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="max-height:10px;">
+											See Details...
+										</button>
+									</td>
+								</tr>
+								<tr>
+									<td colspan="9">
+										<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="DressingRecord2Details" data-bs-parent="#DressingRecords">
+											<div class="accordion-body">
+												<p><strong>Qty of Pads: </strong>5</p>
+												<!-- No Ointment purchased and no products purchased so no details of them -->
+											</div>
+										</div>
+									</td>
+								</tr>
+							</tbody>
+						</table>
 						<div class="alert alert-danger" role="alert">
 							No Record Found
 						</div>
@@ -365,21 +458,21 @@
 				</div>
 				<hr>
 			<% } else if(PatientDetails.Type=='G' ) {%>
-				<div class="alert alert-danger" role="alert">
+				<!-- <div class="alert alert-danger" role="alert">
 					This feature is under development
 				</div>
 				<div id="GeneralMedicineInfo">
 					<div>
-						<% if(PatientDetails.Status=="ACTIVE") { %> 
+						<% //if(PatientDetails.Status=="ACTIVE") { %> 
 							<form action="/patient-details/add-general-medicine-record">
-								<button type="submit" name="addID" value="<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
+								<button type="submit" name="addID" value="<%= //PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
 										width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
 										<path
 											d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
 									</svg>Add General Medicine Record
 								</button>
 							</form>
-						<% } %> 
+						<% //} %> 
 					</div>
 					<div style="margin-top: 20px;">
 						<h4>General Medicine Details</h4>
@@ -397,7 +490,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<!-- <% //for(let i = 0; i < DressingInfo.length ; i += 1) { %>
+								<% //for(let i = 0; i < DressingInfo.length ; i += 1) { %>
 									<tr>
 										<th scope="row"><%= //i+1 %> </th>
 										<td><%= //DressingInfo[i].Date.toLocaleDateString("en-UK") %> </td>
@@ -406,10 +499,10 @@
 										<td><%= //DressingInfo[i].AmountReduction %> </td>
 										<td><%= //DressingInfo[i].AmountPaid %> </td>
 									</tr>
-								<% //} %> -->
+								<% //} %>
 							</tbody>
 						</table>
-						<a type="button" href="/patient-details/general-medicine-records?id=<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary">
+						<a type="button" href="/patient-details/general-medicine-records?id=<%= //PatientDetails.PatientID %>" class="mt-10 btn btn-primary">
 							View All 
 							<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
 								<path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
@@ -417,67 +510,31 @@
 						</a>
 					</div>
 				</div>
-				<hr>
-			<% } %> 
-			<div id="ProductPurchaseInfo">
-				<div>
-					<% if(PatientDetails.Status=="ACTIVE") { %> 
+				<hr> -->
+			<% } %>
+			<div id="AddRecords" class="d-flex justify-content-between">
+				<% if(PatientDetails.Status=="ACTIVE") { %>
+					<div id="AddDressingRecord">
+						<form action="/patient-details/add-dressing-record">
+							<button type="submit" name="addID" value="<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
+									width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+									<path
+										d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+								</svg>Add Dressing Record
+							</button>
+						</form>
+					</div>
+					<div id="AddMoreProducts">
 						<form action="/patient-details/add-products">
 							<button type="submit" name="addID" value="<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
 									width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
 									<path
 										d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-								</svg>Add Products
+								</svg>Add More Products
 							</button>
 						</form>
-					<% } %> 
-				</div>
-				<div style="margin-top: 20px;">
-					<h4>Product Purchasing Details</h4>
-				</div>
-				<% if(ProductsPurchasingInfo.length > 0) { %> 
-					<div class="ProductPurchaseDetails">
-						<table class="table">
-							<thead>
-								<tr>
-									<th scope="col">#</th>
-									<th scope="col">Date</th>
-									<th scope="col">Product Name</th>
-									<th scope="col">Quantity</th>
-									<th scope="col">Item Price</th>
-									<th scope="col">Total Amount</th>
-								</tr>
-							</thead>
-							<tbody>
-								<% for(let i=0;i<ProductsPurchasingInfo.length;i+=1) { %>
-									<tr>
-										<th scope="row"><%= i+1 %> </th>
-										<td><%= ProductsPurchasingInfo[i].Date.toLocaleDateString("en-UK") %> </td>
-										<td><%= ProductsPurchasingInfo[i].ProductName %> </td>
-										<td><%= ProductsPurchasingInfo[i].Quantity %> </td>
-										<td><%= (ProductsPurchasingInfo[i].TotalAmount / ProductsPurchasingInfo[i].Quantity) %> </td>
-										<td><%= ProductsPurchasingInfo[i].TotalAmount %> </td>
-									</tr>
-								<% } %>
-							</tbody>
-						</table>
-						<a type="button" href="/patient-details/products-purchasing-records?id=<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary">
-							View All 
-							<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-								<path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
-							</svg>
-						</a>
 					</div>
-				<% } else { %>
-					<div class="alert alert-danger" role="alert">
-						No Record Found
-					</div>
-				<% } %>  
-			</div>
-			<hr>
-			<div id="OtherChargesInfo">
-				<div>
-					<% if(PatientDetails.Status=="ACTIVE") { %> 
+					<div id="AddCharges">
 						<form action="/patient-details/add-charges">
 							<button type="submit" name="addID" value="<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
 									width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
@@ -486,14 +543,8 @@
 								</svg>Add Charges
 							</button>
 						</form>
-					<% } %> 
-				</div>
-				<div style="margin-top: 20px;">
-					<h4>Other Charges Details</h4>
-				</div>
-				<div class="alert alert-danger" role="alert">
-					This feature is under development
-				</div>
+					</div>
+				<% } %> 
 			</div>
 			<hr>
 		<% } %>
