--- a/views/underconstruction.ejs
+++ b/views/underconstruction.ejs
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="static/css/bootstrap.min.css" rel="stylesheet"
+  <link href="/static/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="static/css/bootstrap-icons.css">
-	<script src="static/js/bootstrap.bundle.min.js"
+	<link rel="stylesheet" href="/static/css/bootstrap-icons.css">
+	<script src="/static/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <title>Site is under construction | Chawla Clinic</title>
