--- a/views/patient-details.ejs
+++ b/views/patient-details.ejs
@@ -382,7 +382,7 @@
 								<tr>
 									<td colspan="9">
 										<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="DressingRecord1Details" data-bs-parent="#DressingRecords">
-											<div class="accordion-body">
+											<div class="accordion-body" style="background-color: #EEEEEE;">
 												<p><strong>Qty of Pads: </strong>5.25</p>
 												<table class="table">
 													<thead>
@@ -442,7 +442,7 @@
 								<tr>
 									<td colspan="9">
 										<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="DressingRecord2Details" data-bs-parent="#DressingRecords">
-											<div class="accordion-body">
+											<div class="accordion-body" style="background-color: #EEEEEE;">
 												<p><strong>Qty of Pads: </strong>5</p>
 												<!-- No Ointment purchased and no products purchased so no details of them -->
 											</div>
