changed heading of dressing details

--- a/views/patient-details.ejs
+++ b/views/patient-details.ejs
@@ -309,7 +309,7 @@
 						<% } %> 
 					</div>
 					<div style="margin-top: 20px;">
-						<h4>Dressing Details</h4>
+						<h4>Payment Details</h4>
 					</div>
 					<% if(DressingInfo.length > 0) { %> 
 						<div class="DressingDetails">
