Updated style and added charges table in payment details

--- a/views/patient-details.ejs
+++ b/views/patient-details.ejs
@@ -366,7 +366,7 @@
 							<tbody class="accordion" id="DressingRecords">
 								<tr class="accordion-item">
 									<th scope="row">1</th>
-									<td>01-01-2022</td>
+									<td>02-01-2022</td>
 									<td>4200</td>
 									<td>1900</td>
 									<td>1200</td>
@@ -382,9 +382,9 @@
 								<tr>
 									<td colspan="9">
 										<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="DressingRecord1Details" data-bs-parent="#DressingRecords">
-											<div class="accordion-body" style="background-color: #EEEEEE;">
+											<div class="accordion-body" style="background-color: #F5F5F5;">
 												<p><strong>Qty of Pads: </strong>5.25</p>
-												<table class="table">
+												<table class="table table-striped">
 													<thead>
 														<th>Ointment Name</th>
 														<th>Quantity</th>
@@ -406,7 +406,7 @@
 														</tr>
 													</tbody>
 												</table>
-												<table class="table">
+												<table class="table table-striped">
 													<thead>
 														<th>Other Items Name</th>
 														<th>Quantity</th>
@@ -414,10 +414,32 @@
 														<th>Total Amount</th>
 													</thead>
 													<tbody>
-														<td>Super Sonic Syrup</td>
-														<td>1</td>
-														<td>1200</td>
-														<td>1200</td>
+														<tr>
+															<td>Super Sonic Syrup</td>
+															<td>1</td>
+															<td>1200</td>
+															<td>1200</td>
+														</tr>
+													</tbody>
+												</table>
+												<table class="table table-striped">
+													<thead>
+														<th>Charges</th>
+														<th>Price</th>
+													</thead>
+													<tbody>
+														<tr>
+															<td>Doctor checkup fees</td>
+															<td>250</td>
+														</tr>
+														<tr>
+															<td>Injection</td>
+															<td>100</td>
+														</tr>
+														<tr>
+															<td>Home Service</td>
+															<td>850</td>
+														</tr>
 													</tbody>
 												</table>
 											</div>
@@ -426,7 +448,7 @@
 								</tr>
 								<tr class="accordion-item">
 									<th scope="row">2</th>
-									<td>02-01-2022</td>
+									<td>01-01-2022</td>
 									<td>4000</td>
 									<td>0</td>
 									<td>0</td>
